--- a/src/css/lv2.css
+++ b/src/css/lv2.css
@@ -70,7 +70,6 @@ body {
 .card-container:hover {
 	cursor: pointer;
 	background: rgba(255, 255, 255, 0.05);
-	box-shadow: 0 0 10mm rgba(0,0,0,1);
 	transform: scale(1.05);
 	animation-name: blink;
 	animation-iteration-count: infinite;
@@ -154,4 +153,9 @@ button {
 
 #start::backdrop {
 	opacity: 0.75;
+}
+
+.card-after img {
+	height: 100%;
+	width: 100%;
 }
