--- a/src/css/lv2.css
+++ b/src/css/lv2.css
@@ -4,6 +4,37 @@
 	box-sizing: border-box;
 }
 
+h1 {
+	margin-bottom: 1em;
+	font-size: var(--font-size-fluid-3);
+	line-height: 1.2;
+}
+
+h2 {
+	margin-bottom: 1em;
+	font-size: var(--font-size-fluid-2);
+	line-height: 1.25;
+}
+
+h3 {
+	font-size: var(--font-size-fluid-1);
+	line-height: 1.3;
+}
+
+h1 span,
+h2 span {
+	display: block;
+}
+.layout {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+	max-width: 35em;
+	margin: 0 auto;
+	margin-top: 0;
+	padding: 2rem 0;
+}
 :root {
 	--swup-blue: hsl(239, 50%, 30%);
 	--swup-red: hsl(354, 99%, 68%);
@@ -26,14 +57,10 @@
 }
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "helvetica neue", helvetica, roboto, noto, "segoe ui", arial, sans-serif;
-	margin: 0;
-	padding: 0;
 	font-size: var(--font-size-fluid-0);
 	line-height: 1.4;
 	background-color: var(--swup-blue);
-	color: white;
 	scrollbar-width: none;
-	-ms-overflow-style: -ms-autohiding-scrollbar;
 }
 .wrapper {
 	box-sizing: content-box;
@@ -42,9 +69,6 @@ body {
 	border-radius: 16px;
 	border: 1px solid rgba(255, 255, 255, 0.05);
 	position: absolute;
-	transform: translate(-50%, -50%);
-	left: 50%;
-	top: 50%;
 	border-radius: 0.6em;
 	box-shadow: 0 0.9em 2.8em rgba(86, 66, 0, 0.2);
 }
